# cmake_node

./: README.md
part1/: CMakeLists.txt
part1/include/: head.h
part1/src/: main.cpp
part2/: CMakeLists.txt  main.cpp
part2/include/: head.h
part3/: CMakeLists.txt  main.cpp
part3/include/: head.h
part4/: CMakeLists.txt  main.cpp
part5/: CMakeLists.txt  main.cpp
part6/: CMakeLists.txt
part6/calc/: dif.cpp
part6/sort/: CMakeLists.txt  insert.cpp
part6/test1/: CMakeLists.txt  calc.cpp
part6/test2/: CMakeLists.txt  sort.cpp
part7/calc/: CMakeLists.txt  add.cpp  sub.cpp
part7/sort/: CMakeLists.txt  insert.cpp
part7/test1/: CMakeLists.txt  main.cpp
part8/: CMakeLists.txt
part8/calc/: CMakeLists.txt  mult.cpp
part8/include/: calc.h  sort.h
part8/sort/: CMakeLists.txt  select.cpp
